# HachiCat

./: .gitignore  Pet-design.md  README.md  build.bat  pyproject.toml  requirements.txt  run.py
assets/sprites/default/: sprite_config.json
src/: __init__.py  main.py
src/agent/: __init__.py  base.py  classifier.py  llm.py  registry.py  reminder.py
src/input/: __init__.py  clipboard_monitor.py  global_monitor.py  hotkey_manager.py
src/memory/: __init__.py  config.py  database.py
src/pet/: __init__.py  animator.py  bubble.py  physics.py  popup_menu.py  settings_dialog.py  state_machine.py  tray.py  widget.py  window.py
src/tools/: clipboard_viewer.py  gallery.py  image_viewer.py  music_panel.py  note.py  note_viewer.py  quick_tools.py  todo.py  todo_viewer.py
src/utils/: icons.py  logger.py  markdown.py  pets.py  theme.py  toast.py
